--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,12 @@
             <id>matsim</id>
             <url>http://dl.bintray.com/matsim/matsim</url>
         </repository>
+        <!--
         <repository>
             <id>ojo-snapshots</id>
             <url>http://oss.jfrog.org/libs-snapshot</url>
         </repository>
+        -->
     </repositories>
 
     <dependencies>
@@ -41,13 +43,19 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>3.7</version>
+        </dependency>
 
-        <!-- 		Example of how to add a contrib.  Note that the version numbers need to be consistent with the matsim version above! -->
+        <!-- 		Example of how to add a contrib.  Note that the version numbers need to be consistent with the matsim version above!
         <dependency>
             <groupId>org.matsim.contrib</groupId>
             <artifactId>otfvis</artifactId>
             <version>0.8.0</version>
         </dependency>
+        -->
     </dependencies>
 
     <build>
@@ -57,8 +65,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <showWarnings>false</showWarnings>
                     <showDeprecation>false</showDeprecation>
                     <encoding>UTF-8</encoding>
@@ -70,14 +78,6 @@
                         <Xmaxwarns>4000</Xmaxwarns>
                         <Xmaxerrs>100</Xmaxerrs>
                     </compilerArguments>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <configuration>
-                    <downloadSources>true</downloadSources>
-                    <downloadJavadocs>true</downloadJavadocs>
                 </configuration>
             </plugin>
         </plugins>
