--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.matsim</groupId>
     <artifactId>pt2matsim</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.9.0</version>
 
     <name>PT2MATSim</name>
     <description>Public Transport to MATSim</description>
+
+    <distributionManagement>
+        <repository>
+            <id>bintray-polettif-matsim</id>
+            <name>polettif-matsim</name>
+            <url>https://api.bintray.com/maven/polettif/matsim/pt2matsim/;publish=1</url>
+        </repository>
+    </distributionManagement>
 
     <repositories>
         <repository>
