--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>opencsv</artifactId>
             <version>3.7</version>
         </dependency>
+        <dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
     </dependencies>
 
     <build>
