build shaded jar

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: java
 
 script:
   - mvn test -B -Dmatsim.preferLocalDtds=true
-  - if ! [[ $( cat pom.xml | grep "SNAPSHOT" ) ]]; then mvn deploy -DskipTests=true --settings=settings.xml; fi
+  - mvn deploy -DskipTests=true --settings=settings.xml
+#  - if ! [[ $( cat pom.xml | grep "SNAPSHOT" ) ]]; then mvn deploy -DskipTests=true --settings=settings.xml; fi
