--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: java
 
 script:
   - mvn test -B -Dmatsim.preferLocalDtds=true
-  - mvn deploy -DskipTests=true --settings=settings.xml
-#  - if ! [[ $( cat pom.xml | grep "SNAPSHOT" ) ]]; then mvn deploy -DskipTests=true --settings=settings.xml; fi
+  - if ! [[ $( cat pom.xml | grep "SNAPSHOT" ) ]]; then mvn deploy -DskipTests=true --settings=settings.xml; fi
