--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 
 script:
   - mvn test -B -Dmatsim.preferLocalDtds=true
-  - if ! [[ $( cat pom.xml | grep "SNAPSHOT" ) ]]; then if [[ $TRAVIS_BRANCH == $TRAVIS_TAG ]]; then mvn deploy -DskipTests=true --settings=settings.xml; fi; fi
+  - if ! [[ $( cat pom.xml | grep "SNAPSHOT" ) ]]; then if [[ -n $TRAVIS_TAG ]]; then mvn deploy -DskipTests=true --settings=settings.xml; fi; fi
