--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         </repository>
         <repository>
         	<id>osgeo</id>
-			<url>http://download.osgeo.org/webdav/geotools</url>
+			<url>https://repo.osgeo.org/repository/release/</url>
         </repository>
     </repositories>
 
