--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     </repositories>
 
 	<properties>
-		<geotools.version>20.2</geotools.version>
+		<geotools.version>24.2</geotools.version>
 	</properties>
 
     <dependencies>
@@ -63,6 +63,16 @@
             <groupId>net.lingala.zip4j</groupId>
             <artifactId>zip4j</artifactId>
             <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-referencing</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>${geotools.version}</version>
         </dependency>
     </dependencies>
 
