Update pom.xml with new MATSim Maven repository

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <repositories>
         <repository>
             <id>matsim</id>
-            <url>http://dl.bintray.com/matsim/matsim</url>
+            <url>https://repo.matsim.org/repository/matsim</url>
         </repository>
         <repository>
         	<id>osgeo</id>
