--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -1,4 +1,4 @@
-name: deploy-on-release-created
+name: Maven Deploy
 
 on:
   release:
@@ -30,9 +30,6 @@ jobs:
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
 
-      # - name: Set MATSim version
-      #  run: mvn versions:set --batch-mode -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
-
       # Build and publish are separated so we start deploying only after all jars are built successfully
       - name: Build jars
         run: mvn package --batch-mode -DskipTests
@@ -44,11 +41,5 @@ jobs:
           MAVEN_USERNAME: ${{ secrets.REPOMATSIM_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.REPOMATSIM_TOKEN }}
 
-      - name: Upload matsim (core) assembly as release asset
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ github.token }}
-          file: matsim/target/matsim-${{ github.event.release.tag_name }}-release.zip
-          tag: ${{ github.event.release.tag_name }}
     env:
       MAVEN_OPTS: -Xmx2g
