--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.matsim</groupId>
     <artifactId>pt2matsim</artifactId>
-    <version>22.11-SNAPSHOT</version>
+    <version>22.11</version>
 
     <name>PT2MATSim</name>
     <description>Public Transport to MATSim</description>
