--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.matsim</groupId>
             <artifactId>matsim</artifactId>
-            <version>16.0-PR3096</version>
+            <version>2024.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
