--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
     <properties>
         <maven.compiler.release>21</maven.compiler.release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <geotools.version>29.6</geotools.version>
         <jackson.version>2.18.2</jackson.version>
         <jts.version>1.20.0</jts.version>
