Switch to checkerframework Nullable

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <version>2.11.5</version>
         </dependency>
         <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>checker-qual</artifactId>
+            <version>3.49.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>33.4.0-jre</version>
