--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.matsim</groupId>
             <artifactId>matsim</artifactId>
-            <version>2025.0-2025w08</version>
+            <version>2025.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
