--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.matsim</groupId>
             <artifactId>matsim</artifactId>
-            <version>2026.0-PR3956</version>
+            <version>2026.0-2025w25</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
