--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <jts.version>1.20.0</jts.version>
         <log4j.version>2.25.0</log4j.version>
         <junit.version>5.13.1</junit.version>
+        <commons.codec.version>1.18.0</commons.codec.version>
     </properties>
 
     <dependencies>
@@ -117,7 +118,12 @@
             <version>${jackson.version}</version>
             <scope>import</scope>
             <type>pom</type>
-          </dependency>   
+          </dependency>
+          <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons.codec.version}</version>
+          </dependency>
         </dependencies>
       </dependencyManagement>
 
