--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,6 @@
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-api</artifactId>
-            <version>${geotools.version}</version>
         </dependency>
     </dependencies>
 
@@ -118,6 +117,13 @@
             <version>${jackson.version}</version>
             <scope>import</scope>
             <type>pom</type>
+          </dependency>
+          <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-bom</artifactId>
+            <version>${geotools.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
           </dependency>
           <dependency>
             <groupId>commons-codec</groupId>
