--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -14,8 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v6
     - name: Set up JDK 21
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v5
       with:
-        java-version: 1.21
+        distribution: 'temurin'
+        java-version: '21'
     - name: Build with Maven
       run: mvn verify -B -Dmatsim.preferLocalDtds=true
