--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -22,10 +22,10 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v5
         with:
           java-version: 21
-          distribution: 'adopt'
+          distribution: 'temurin'
           server-id: pt2matsim-releases
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
